fixed in-page navigation overlapping

--- a/src/idsk/components/in-page-navigation/_in-page-navigation.scss
+++ b/src/idsk/components/in-page-navigation/_in-page-navigation.scss
@@ -9,7 +9,7 @@
     margin-bottom: govuk-spacing(3);
     padding: 0;
     width: 100%;
-    z-index: 11;
+    z-index: 10;
 
     @include mq($from: tablet) {
       margin-bottom: govuk-spacing(6);
@@ -25,7 +25,7 @@
 
     &--sticky {
       position: fixed;
-      top: 60px;
+      top: 70px;
       width: 100%;
 
       @include mq($from: desktop) {
